--- a/spotify.html
+++ b/spotify.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="spotify.css">
-    <link rel="stylesheet" href="utility.css">
+    <link rel="stylesheet" href="leftbox.css">
+    <link rel="stylesheet" href="rightbox.css">
     <title>Spotify - Web Player:Music for everyone</title>
 </head>
 
